--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'ink';
+    font-style: normal;
+    font-weight: 200;
+    src: url('../fonts/InkLipquid/InkLipquid.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Light'),
+    url('../fonts/InkLipquid/InkLipquid.woff') format('woff') /* Modern Browsers */
+}
 body {
     overflow-x: hidden;
 }
@@ -122,10 +130,10 @@ body {
     width: 0;
     height: 0;
     background-color: #9a8b7e;
-    background: -webkit-gradient(linear, left top, right top, from(#9a8b7e), to(#9a8b7e));
-    background: -webkit-linear-gradient(left, #9a8b7e 0%, #9a8b7e 100%);
-    background: -o-linear-gradient(left, #9a8b7e 0%, #9a8b7e 100%);
-    background: linear-gradient(to right, #9a8b7e 0%, #9a8b7e 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#ed7d1b), to(#ed7d1b));
+    background: -webkit-linear-gradient(left, #ed7d1b 0%, #ed7d1b 100%);
+    background: -o-linear-gradient(left, #ed7d1b 0%, #ed7d1b 100%);
+    background: linear-gradient(to right, #ed7d1b 0%, #ed7d1b 100%);
 }
 
 .img-box li:after, .slide-box:after, .review > div:after {
@@ -134,10 +142,10 @@ body {
     width: 0;
     height: 0;
     background-color: #9a8b7e;
-    background: -webkit-gradient(linear, left bottom, left top, from(#9a8b7e), to(#9a8b7e));
-    background: -webkit-linear-gradient(bottom, #9a8b7e 0%, #9a8b7e 100%);
-    background: -o-linear-gradient(bottom, #9a8b7e 0%, #9a8b7e 100%);
-    background: linear-gradient(to top, #9a8b7e 0%, #9a8b7e 100%);
+    background: -webkit-gradient(linear, left bottom, left top, from(#ed7d1b), to(#ed7d1b));
+    background: -webkit-linear-gradient(bottom, #ed7d1b 0%, #ed7d1b 100%);
+    background: -o-linear-gradient(bottom, #ed7d1b 0%, #ed7d1b 100%);
+    background: linear-gradient(to top, #ed7d1b 0%, #ed7d1b 100%);
 }
 
 .img-box li div:before, .slide-box div:before, .review > div a:before {
@@ -146,10 +154,10 @@ body {
     width: 0;
     height: 0;
     background-color: #9a8b7e;
-    background: -webkit-gradient(linear, right top, left top, from(#9a8b7e), to(#9a8b7e));
-    background: -webkit-linear-gradient(right, #9a8b7e 0%, #9a8b7e 100%);
-    background: -o-linear-gradient(right, #9a8b7e 0%, #9a8b7e 100%);
-    background: linear-gradient(to left, #9a8b7e 0%, #9a8b7e 100%);
+    background: -webkit-gradient(linear, right top, left top, from(#ed7d1b), to(#ed7d1b));
+    background: -webkit-linear-gradient(right, #ed7d1b 0%, #ed7d1b 100%);
+    background: -o-linear-gradient(right, #ed7d1b 0%, ed7d1b9a8b7e 100%);
+    background: linear-gradient(to left, #ed7d1b 0%, #ed7d1b 100%);
 }
 
 .img-box li div:after, .slide-box div:after, .review > div a:after {
@@ -158,10 +166,10 @@ body {
     width: 0;
     height: 0;
     background-color: #9a8b7e;
-    background: -webkit-gradient(linear, left top, left bottom, from(#9a8b7e), to(#9a8b7e));
-    background: -webkit-linear-gradient(top, #9a8b7e 0%, #9a8b7e 100%);
-    background: -o-linear-gradient(top, #9a8b7e 0%, #9a8b7e 100%);
-    background: linear-gradient(to bottom, #9a8b7e 0%, #9a8b7e 100%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#ed7d1b), to(#ed7d1b));
+    background: -webkit-linear-gradient(top, #ed7d1b 0%, #ed7d1b 100%);
+    background: -o-linear-gradient(top, #ed7d1b 0%, #ed7d1b 100%);
+    background: linear-gradient(to bottom, #ed7d1b 0%, #ed7d1b 100%);
 }
 
 .img-box li:hover:before, .img-box li div:hover:before,
@@ -286,7 +294,7 @@ body {
 }
 
 .section03 .text h4 span, .section04 .text h4 span {
-    color: #9a8b7e;
+    color: #000;
 }
 
 .section03 .text h4 + p, .section04 .text h4 + p {
@@ -344,7 +352,7 @@ body {
     width: 194px;
     height: 55px;
     position: absolute;
-    border: 2px solid #9b8b7e;
+    border: 2px solid #958c85;
     display: inline-block;
     margin-top: 0;
     font-size: 17px;
@@ -355,7 +363,6 @@ body {
     padding: 16px 30px;
     letter-spacing: -1.5px;
     font-weight: 600;
-
 }
 
 .section04 .details-link a {
@@ -364,8 +371,9 @@ body {
 }
 
 .section04 .text h4 + p {
-    margin-bottom: 79px;
+    margin-bottom: 52px;
     font-size: 17px;
+    color: #5e5e5c;
 }
 
 .section04 .details-link:after {
@@ -404,6 +412,7 @@ body {
     height: 161px;
     border: 1px solid #d7d7d7;
     box-sizing: border-box;
+    background: #fff;
 }
 
 .review-text h4 {
@@ -503,6 +512,11 @@ body {
     top: 0;
 }
 
+.section04 .bx-wrapper .bx-controls-direction a img {
+    margin: 0 auto;
+    padding-top: 22px;
+}
+
 .section06 .bx-wrapper .bx-controls-direction a.bx-prev {
     left: -100px;
 }
@@ -519,6 +533,10 @@ body {
     border: none;
     margin-top: 180px;
     top: 0;
+    background: none;
+    border: 1px solid #98989a;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 .section04 .bx-wrapper .bx-controls-direction a.bx-prev {
@@ -860,9 +878,8 @@ body .section07 .bx-pager-link span + span {
     /* margin-top: 113px; */
     position: relative;
     height: 627px;
-    padding: 129px 0;
+    padding-top: 57px;
     background: #f5f5f5;
-    padding-bottom: 93px;
     box-sizing: border-box;
 }
 
@@ -877,10 +894,10 @@ body .section07 .bx-pager-link span + span {
     line-height: 1.2;
     position: relative;
     z-index: 1;
-    padding-top: 20px;
     margin-bottom: 9px;
     letter-spacing: -3px;
     font-weight: 200;
+    font-size: 45px;
 }
 
 .section05 .section-text {
@@ -981,7 +998,7 @@ body .section07 .bx-pager-link span + span {
 
 .section05 .slider-container {
     float: right;
-    margin-top: -192px;
+    margin-top: -131px;
     top: 0;
 }
 
@@ -991,8 +1008,7 @@ body .section07 .bx-pager-link span + span {
 
 .section05 .text {
     padding-left: 437px;
-    width: 445px;
-    padding-top: 50px;
+    width: 475px;
     color: #fff;
     transform: translate3d(0, -50px, 0);
     transition: transform 1200ms;
@@ -1020,13 +1036,18 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section05 .sub-text {
-    font-size: 25px;
+    font-size: 39px;
     line-height: 1.25;
     color: #fff;
-    margin-bottom: 25px;
+    margin-bottom: 78px;
     margin-top: 30px;
     letter-spacing: 0px;
-    font-family: KCC !Important;
+    font-family: ink !Important;
+}
+
+.section05 .sub-text span {
+    font-family: ink !Important;
+    color: #dc7113;
 }
 
 .section05 .dc {
@@ -1048,7 +1069,7 @@ body .section07 .bx-pager-link span + span {
 .section05 .bg {
     width: 50%;
     height: 100%;
-    background: #9a8b7e url(../images/main/main_bg02.jpg) no-repeat center;
+    background: #161b2f url(../images/main/main_bg02.jpg) no-repeat center;
     position: absolute;
     top: -19px;
     right: 0;
@@ -1170,6 +1191,14 @@ body .section07 .bx-pager-link span + span {
     position: relative;
 }
 
+.section05 .img-arrow .slider-prev:hover {
+    background: #ed6907 url(../images/main/arrowleft_over.png) no-repeat center;
+}
+
+.section05 .img-arrow .slider-prev:hover:before {
+    background: #fff;
+}
+
 .section05 .img-arrow .slider-prev:before {
     position: absolute;
     content: '';
@@ -1184,6 +1213,11 @@ body .section07 .bx-pager-link span + span {
 
 .section05 .img-arrow .slider-next {
     background: #fff url(../images/main/arrow_right04.png) no-repeat center;
+}
+
+
+.section05 .img-arrow .slider-next:hover {
+    background: #ed6907 url(../images/main/arrowrignt_over.png) no-repeat center;
 }
 
 .section07 .bx-controls {
@@ -1716,4 +1750,19 @@ body .section07 .bx-pager-link span + span {
 .section02 .max-layout-width {
     z-index: 11;
     position: relative
+}
+
+.section02 {
+    padding-top: 50px;
+    box-sizing: border-box;
+}
+
+.section04 {
+    padding-top: 50px;
+    background: url(../images/main/bg02.jpg) no-repeat;
+    background-position-y: 80px;
+}
+
+.section05 .section-title-color {
+    color: #010101;
 }
